refactor: Update project name and styling
Rename the project from "wise-megapromo" to "wise-control" across package.json, index.html, and metadata.json.
Enhance mobile responsiveness and visual styling in index.html, including viewport settings, theme color, and safe area insets.
Introduce new utility functions and refine existing ones in constants.ts for better code organization and functionality, such as formatting currency, checking future dates, escaping CSV, and formatting dates for display.
Update the calculateSaleMetrics function to accept settings for default values, improving its flexibility.
Modify geminiService.ts to use the updated calculateSaleMetrics function with the new settings parameter and improve the prompt for business insights.
Refine the StatsCard component in components/StatsCard.tsx with updated styling, color schemes, and improved transitions for a more polished UI.
Add new `partnerAPercentage` and `partnerBPercentage` fields to the AppSettings interface in types.ts to accommodate future partnership commission tracking.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
+
 {
-  "short_name": "WisePromo",
-  "name": "Wise MegaPromo",
+  "short_name": "WiseControl",
+  "name": "Wise Control",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/726/726548.png",
